--- a/src/app.module.css
+++ b/src/app.module.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app {
+  font-size: 200px;
+  display: flex;
+  justify-content: center;
+}
