Edit: App styling

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -12,8 +12,12 @@ code {
     monospace;
 }
 
-.app {
+.App {
   font-size: 200px;
   display: flex;
   justify-content: center;
+}
+
+* {
+  box-sizing: border-box;
 }
