--- a/src/app.module.css
+++ b/src/app.module.css
@@ -21,3 +21,14 @@ code {
 * {
   box-sizing: border-box;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000055;
+  z-index: 10;
+}
